Make sure there are always scrollbars on graph view. Looks nicer.

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -2,6 +2,7 @@
 {
   height: 100%;
   overflow: auto;
+  overflow-y: scroll;
 }
 
 #main-scroll-content
